--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
                         <div class="col-lg-4 left-herosection">
                             <h1 class="hero-heading">Get Exclusive Discounts</h1>
                             <p class="hero-subheading">Discounts and Offers</p>
-                            <a href="#" class="btn-register">Register Now</a>
+                            <a href="#" class="btn-register" id="registerNowButton">Register Now</a>
 
 
                             <div class="rectangle-group">
-                                <div class="rectangle filled"></div>
-                                <div class="rectangle outlined"></div>
-                                <div class="rectangle outlined"></div>
-                                <div class="rectangle outlined"></div>
-                                <div class="rectangle outlined"></div>
-                                <div class="rectangle outlined"></div>
+                                <div class="rectangle filled" data-aos="fade-right"></div>
+                                <div class="rectangle outlined" data-aos="fade-right"></div>
+                                <div class="rectangle outlined" data-aos="fade-right"></div>
+                                <div class="rectangle outlined" data-aos="fade-left"></div>
+                                <div class="rectangle outlined" data-aos="fade-left"></div>
+                                <div class="rectangle outlined" data-aos="fade-left"></div>
                             </div>
                         </div>
                         <div class="col-lg-8">
@@ -305,7 +305,7 @@
         <div class="container">
             <!-- Section Heading Row -->
             <div class="row align-items-center justify-content-between mx-0 px-0 offers-near-heading">
-                <div class="col-auto d-flex align-items-center">
+                <div class="col-auto d-flex align-items-center flex-wrap">
                     <h2 class="offers-title">OFFERS NEAR</h2>
                     <div class="offers-location">
                         <span class="location-text">Delhi</span>
@@ -631,7 +631,7 @@
         <div class="container">
             <!-- Section Heading Row -->
             <div class="row align-items-center justify-content-between mx-0 px-0 offers-near-heading">
-                <div class="col-auto d-flex align-items-center">
+                <div class="col-auto d-flex align-items-center flex-wrap">
                     <h2 class="offers-title">Best offers on</h2>
                     <div class="offers-location">
                         <span class="location-text">Electronic Devices</span>
