--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav mx-auto"> <!-- Use mx-auto to center the nav items -->
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Fashion</a>
+                                    <a class="nav-link" href="#">Fashion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Beauty</a>
+                                    <a class="nav-link" href="#">Beauty</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Food & Drink</a>
+                                    <a class="nav-link" href="#">Food & Drink</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Health & Fitness</a>
+                                    <a class="nav-link" href="#">Health & Fitness</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Lifestyle</a>
+                                    <a class="nav-link" href="#">Lifestyle</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Technology</a>
+                                    <a class="nav-link" href="#">Technology</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Sports & Media</a>
+                                    <a class="nav-link" href="#">Sports & Media</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">All</a>
+                                    <a class="nav-link" href="#">All</a>
                                 </li>
                             </ul>
                         </div>
