--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav mx-auto"> <!-- Use mx-auto to center the nav items -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Fashion</a>
+                                    <a class="nav-link" href="#">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Beauty</a>
+                                    <a class="nav-link" href="#nav-one">Top Offers</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Food & Drink</a>
+                                    <a class="nav-link" href="#nav-two"> Offers Near</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Health & Fitness</a>
+                                    <a class="nav-link" href="#nav-three">Popular Categories</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Lifestyle</a>
+                                    <a class="nav-link" href="#nav-four">Top Vendors</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Technology</a>
+                                    <a class="nav-link" href="#nav-five">Get Internship</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Sports & Media</a>
+                                    <a class="nav-link" href="#nav-six">Electronic Devices </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">All</a>
+                                    <a class="nav-link" href="#nav-seven">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -175,7 +175,7 @@
 
 
 
-    <section class="top-offers-section" data-aos="fade-up">
+    <section class="top-offers-section" data-aos="fade-up" id="nav-one">
         <div class="container my-5 ">
 
             <!-- Section Heading Row -->
@@ -301,7 +301,7 @@
 
 
     <!-- Offers Near Section -->
-    <section class="offers-near-container container-fluid px-0 " data-aos="fade-up">
+    <section class="offers-near-container container-fluid px-0 " data-aos="fade-up" id="nav-two">
         <div class="container">
             <!-- Section Heading Row -->
             <div class="row align-items-center justify-content-between mx-0 px-0 offers-near-heading">
@@ -430,7 +430,7 @@
 
 
 
-    <section class="popular-categories">
+    <section class="popular-categories" id="nav-three">
         <div class="container">
             <!-- Section Heading Row -->
             <div class="row align-items-center justify-content-between mx-0 px-0 offers-near-heading">
@@ -504,7 +504,7 @@
 
 
 
-    <section class="brands-section">
+    <section class="brands-section" id="nav-four">
         <div class="container">
             <!-- Section Heading Row -->
             <div class="row align-items-center justify-content-between mx-0 px-0 offers-near-heading">
@@ -573,7 +573,7 @@
 
 
 
-    <section class="register-section" data-aos="fade-up">
+    <section class="register-section" data-aos="fade-up" id="nav-five">
         <div class="container register-image-parent">
             <img src="./e-assets/images/register-image.png" alt="Internship Image" class="register-image">
 
@@ -627,7 +627,7 @@
 
 
 
-    <section class="popular-section" data-aos="fade-up">
+    <section class="popular-section" data-aos="fade-up" id="nav-six">
         <div class="container">
             <!-- Section Heading Row -->
             <div class="row align-items-center justify-content-between mx-0 px-0 offers-near-heading">
@@ -797,7 +797,7 @@
 
 
     <!-- Footer Section -->
-    <footer class="footer-section" data-aos="fade-down">
+    <footer class="footer-section" data-aos="fade-down" id="nav-seven">
         <img src="./e-assets/images/footer-left_image.jpg" class="footer_left_image" alt="">
         <div class="footer-container">
             <!-- Left Box -->
@@ -822,6 +822,8 @@
 
 
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollToTopButton" title="Go to top">↑</button>
 
 
 
